--- a/arch/arm64/configs/platina_defconfig
+++ b/arch/arm64/configs/platina_defconfig
@@ -156,6 +156,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 # CONFIG_CHECKPOINT_RESTORE is not set
+CONFIG_SCHED_CASS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
