--- a/arch/arm64/configs/wayne_defconfig
+++ b/arch/arm64/configs/wayne_defconfig
@@ -152,6 +152,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 # CONFIG_CHECKPOINT_RESTORE is not set
+CONFIG_SCHED_CASS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SCHED_TUNE is not set
 # CONFIG_SYSFS_DEPRECATED is not set
